--- a/GoodHabits.HabisService/appsettings.json
+++ b/GoodHabits.HabisService/appsettings.json
@@ -25,7 +25,7 @@
       },
       {
         "TenantName": "Nomellini",
-        "ConnectionString": "Host=ep-divine-band-a55jqq03.us-east-2.aws.neon.tech;Database=nomellini;Username=attendere_owner;Password=RUTxW0O6oLQr"
+        "ConnectionString": "Host=ep-divine-band-a55jqq03.us-east-2.aws.neon.tech;Database=nomellini;Username=attendere_owner;Password=*"
       }
 
     ]
